# ms0515

./: .gitattributes  .gitignore  BRANCH_STATUS.md  CLAUDE.md  README.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md
docs/hardware/: board.md  cpu.md  filesystem.md  floppy.md  keyboard.md  memory.md  ramdisk.md  timer.md  video.md
docs/kb/: DISK_COPYING.md  KNOWN_ISSUES.md  MS7004_FIRMWARE_PORT.md  MS7004_WIRING.md  OSK_BEHAVIOUR_RULES.md  REFERENCES.md  TODO.md  VERIFICATION.md
emu/: CMakeLists.txt  README.md  conanfile.py
emu/assets/disks/: kbtest_osa.dsk  mihin.dsk  omega-games.dsk  omega-lang.dsk  osa.dsk  rodionov.dsk  rodionov2.dsk
emu/assets/keyboard/: mc7004_keyboard_original.rom  ms7004_layout.txt
emu/assets/rom/: ms0515-roma.rom
emu/core/: CMakeLists.txt
emu/core/include/ms0515/: board.h  cassette.h  floppy.h  i8035.h  i8243.h  keyboard.h  memory.h  ms0515.h  ms7004.h  ms7004_fw.h  ramdisk.h  rom_patches.h  trace.h
emu/core/include/ms0515/core/: board.h  cpu.h  floppy.h  keyboard.h  ms7004.h  snapshot.h  timer.h  trace.h
emu/core/src/: board.c  cassette.c  cpu.c  cpu_ops.c  floppy.c  i8035.c  i8243.c  keyboard.c  memory.c  ms7004.c  ms7004_fw.c  ramdisk.c  rom_patches.c  snapshot.c  timer.c  trace.c
emu/core/tests/: CMakeLists.txt  test_floppy.cpp  test_keyboard.cpp  test_memory.cpp  test_ms7004.cpp  test_ramdisk.cpp  test_timer.cpp
emu/frontend/: CMakeLists.txt  version.rc.in
emu/frontend/src/: App.cpp  App.hpp  Assets.cpp  Assets.hpp  Audio.cpp  Audio.hpp  Cli.cpp  Cli.hpp  Config.cpp  Config.hpp  Keymap.cpp  Keymap.hpp  OnScreenKeyboard.cpp  OnScreenKeyboard.hpp  PhysicalKeyboard.cpp  PhysicalKeyboard.hpp  Platform.hpp  Platform_unix.cpp  Platform_win32.cpp  ScreenReader.cpp  ScreenReader.hpp  TraceLog.cpp  TraceLog.hpp  Ui.cpp  Ui.hpp  Video.cpp  Video.hpp  main.cpp
emu/frontend/tests/: CMakeLists.txt
emu/lib/: CMakeLists.txt
emu/lib/include/ms0515/: Debugger.hpp  Disassembler.hpp  Emulator.hpp  GdbStub.hpp  KeyInputAdapter.hpp  KeyboardLayout.hpp  ScreenReader.hpp  Terminal.hpp
emu/lib/src/: Debugger.cpp  Disassembler.cpp  Emulator.cpp  EmulatorInternal.hpp  GdbStub.cpp  KeyInputAdapter.cpp  KeyboardLayout.cpp  ScreenReader.cpp  Terminal.cpp
emu/lib/tests/: CMakeLists.txt  test_board.cpp  test_boot.cpp  test_cpu.cpp  test_disassembler.cpp  test_disk.hpp  test_keyboard_emulated.cpp  test_keyboard_layout.cpp  test_screen_reader.cpp  test_terminal.cpp
emu/tests/: CMakeLists.txt  test_board.cpp  test_boot.cpp  test_cpu.cpp  test_disk.hpp  test_floppy.cpp  test_i8035.cpp  test_i8243.cpp  test_keyboard.cpp  test_keyboard_emulated.cpp  test_memory.cpp  test_ms7004.cpp  test_ms7004_fw.cpp  test_screen_reader.cpp  test_terminal.cpp  test_timer.cpp
emu/tests/disks/: test_mihin.dsk  test_omega.dsk  test_rod.dsk
tools/: build_bootdisk.py  convert_extended_dsk.py  dasm8048.py  dump_state.py  pdp11_disasm.py  rt11_dir.py  split_double_sided.py
